--- a/index.html
+++ b/index.html
@@ -4,47 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Microsoft Project</title>
     <style>
-        body {
+        body{
+            background-color: #DED9D9;
             margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
         }
-        div {
-            margin: 0;
+        table{
+            margin: 1;
+        }
+        div{
+            margin: 1;
         }
     </style>
 </head>
 <body>
     <div>
-        <h1 style="font-family: Arial; text-align: center;" >Microsoft Windows 11</h1>
+        <table border="0" align="center">
+            <tr>
+                <td>
+                    <img src="Logo.PNG">
+                </td>
+                <td>
+                    <h1>Microsoft Project</h1>
+                </td>
+            </tr>
+        </table>
     </div>
+    <hr>
     <div>
-        <hr style="color: black;">
+        <style>
+        div{
+            margin: 1em;
+        }
+        </style>
+        <h1>Apresentação</h1>
     </div>
-    <div style="text-align:center;">
-        <img src="imagem inicial.PNG" style="display:block; margin: 0 auto; width: 650px ; height: 350px;">
-    </div>
-    <div>
-        <hr>
-    </div>
-    <h1 style="font-family: Arial; text-align: left;">Apresentação</h1>
-    <div>
-        <p style="font-family: verdana; text-align: center;" >Nós do Microsoft Windows estamos lançando nosso novo software! venha conferir as novidades!<br>
-            Aprimoramos nosso software para que a experiência de nosso clientes seja mais satisfatória, corrigindo alguns bugs,<br>
-             de deixando nossos sistemas mais rápidos, estética aprimorada, além de alguns programas que chegaram para inovar as<br>
-              experiências de nossos clientes!</p>
-    </div>
-    <div>
-        <hr>
-    </div>
-    <div>
-        <h1 style="font-family: Arial; text-align: left;">Recursos</h1>
-    </div>
-    <div style="text-align: center;">
-        <img src="Capturar.PNG ">
-    </div>
-    <div>
-        <hr>
-    </div>
+    <table>
+        <tr>
+            <td>
+                <img src="Imagem 01.PNG">
+            </td>
+            <td align="center">Use uma ferramenta de gerenciamento de projetos poderosa, porém simples, para planejar, gerenciar<br>
+                 e entregar trabalho sem esforço, de projetos únicos a grandes iniciativas.
+            </td>
+        </tr>
+    </table>
+    <br>
+    <br>
+    <br>
+    <table>
+        <tr>
+            <td align="right">
+                <img src="Imagem 02.PNG">
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
